# clearance-federation

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  REQUIREMENTS.md  V_AND_V_PLAN.md
ClearanceDDS/: ClearanceDDS.Build.cs
ClearanceDDS/IDL/: AirspaceTelemetry.idl
ClearanceDDS/Private/: ClearanceDDSModule.cpp  ClearanceDDSPublisher.cpp  ClearanceDDSSanity.cpp  ClearanceDDSSubscriber.cpp
ClearanceDDS/Public/ClearanceDDS/: ClearanceDDSPublisher.h  ClearanceDDSSanity.h  ClearanceDDSSubscriber.h
ClearanceDIS/: .gitignore  CMakeLists.txt  ClearanceDIS.Build.cs
ClearanceDIS/Private/: ClearanceDISModule.cpp  DISWireFormat.cpp
ClearanceDIS/Public/ClearanceDIS/: ClearanceDISPDU.h
ClearanceDIS/test/: CMakeLists.txt  test_wire_format.cpp
ClearanceHLA/: ClearanceHLA.Build.cs
ClearanceHLA/Private/: ClearanceHLAFederate.cpp  ClearanceHLAModule.cpp
ClearanceHLA/Public/ClearanceHLA/: ClearanceHLAExport.h  ClearanceHLAFederate.h
ClearanceRTI/: ClearanceRTI.Build.cs
ClearanceRTI/IDL/: AirspaceTelemetryRTI.idl
ClearanceRTI/Private/: ClearanceRTIModule.cpp  ClearanceRTIPublisher.cpp
ClearanceRTI/Public/ClearanceRTI/: ClearanceRTIExport.h  ClearanceRTIPublisher.h
